--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         <div class="project">
             <img src="os.png" alt="Image" class="project_img">
             <h2 class="h2_format">Hotel operating system</h2>
-            <a href="default.asp"><img src="link.jpg" alt="github link" class = "project_img"></a>
+            <a href="https://github.com/HeinCdp/github-cmpg223-project"><img src="link.jpg" alt="github link" class = "project_img"></a>
         </div>
         <div class="project">
             <img src="enc.jpg" alt="Image" class="project_img">
             <h2 class="h2_format">Cryptographic software</h2>
-            <a href="default.asp"><img src="link.jpg" alt="github link" class = "project_img"></a>
+            <a href="https://github.com/HeinCdp/encryption"><img src="link.jpg" alt="github link" class = "project_img"></a>
         </div>
         <div class="project">
             <img src="mapp.jpg" alt="Image" class="project_img">
             <h2 class="h2_format">IP-ADD Messaging App</h2>
-            <a href="default.asp"><img src="link.jpg" alt="github link" class = "project_img"></a>
+            <a href="https://github.com/CyberPenguinIan/group3-cmpg315"><img src="link.jpg" alt="github link" class = "project_img"></a>
         </div>
     </section>
     <div id = "skills" class="section">
@@ -152,7 +152,7 @@
             <li>
               <svg viewBox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" id="gh" cx="50" cy="50" r="45" style="--percent: 0.65"></circle>
+                <circle class="cbar" id="gh" cx="50" cy="50" r="45" style="--percent: 0.87"></circle>
               </svg>
               <span class="tl-name">System Analysis and development 87%</span>
               <span class="tl-exp"></span>
